Change ranges and better UI for selector

--- a/src/ui/views/input.less
+++ b/src/ui/views/input.less
@@ -18,10 +18,16 @@
         > #emoji-group-selector {
             overflow-x: scroll;
             border-bottom: 1px solid #dedede;
-            height: 30px;
+            height: 33px;
+            margin-left: 5px;
 
+            > .emoticon {
+                height: 32px;
+                padding-bottom:2px;
+            }
             > .emoticon.glow {
-                background: radial-gradient(17px at 50% 50% , rgba(0, 50, 255, 0.3), rgba(0,0,0,0))
+                border-bottom: 2px solid #a0a0a0;
+
             }
 
         }
