refactored themeable colors into core less file

--- a/src/ui/views/applayout.less
+++ b/src/ui/views/applayout.less
@@ -12,7 +12,7 @@
             width: 30px;
             line-height: 30px;
             text-align: center;
-            border-right: 1px solid #b4b4b4;
+            border-right: 1px solid;
         }
     }
     > .leftresize {
@@ -28,8 +28,7 @@
     }
     > .left {
         -webkit-user-select: none;
-        background: #f0f0f0;
-        border-right: 1px solid #b4b4b4;
+        border-right: 1px solid;
         flex: none;
         display: flex;
         flex-direction: column;
@@ -57,8 +56,7 @@
         }
         > .foot {
             flex: none;
-            background: #f6f6f6;
-            border-top: 1px solid #b4b4b4;
+            border-top: 1px solid;
         }
     }
     > .info {
@@ -67,9 +65,8 @@
         right: 15px;
         > div {
             padding: 5px 10px;
-            border: 1px solid #b4b4b4;
+            border: 1px solid;
             border-top: none;
-            background: white;
         }
     }
 }
