--- a/src/ui/views/controls.less
+++ b/src/ui/views/controls.less
@@ -2,9 +2,8 @@
 
 .controls {
     display: flex;
-    background: #fff;
     height: 31px;
-    border-top: 1px solid #b4b4b4;
+    border-top: 1px solid;
     > .fill {
         flex: 1;
     }
@@ -13,13 +12,13 @@
         width: 30px;
         height: 31px;
         line-height: 28px;
-        border-right: 1px solid #b4b4b4;
+        border-right: 1px solid;
         text-align: center;
         cursor: pointer;
         align-content: center;
         &:last-child {
             border-right: none;
-            border-left: 1px solid #b4b4b4;
+            border-left: 1px solid;
         }
     }
 }
