--- a/src/ui/views/input.less
+++ b/src/ui/views/input.less
@@ -81,8 +81,7 @@
                 display: inline-block;
                 flex: none;
                 margin-left: 5px;
-                background: white;
-                border: 1px solid #dedede;
+                border: 1px solid;
                 border-radius: 3px;
                 height: 26px;
                 width: 26px;
