--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -1,8 +1,11 @@
-
 .messages {
     padding: 15px 15px 0 15px;
     .historyinfo {
         height: 60px;
+        .material-icons{
+            font-size: 20px;
+            vertical-align: top;
+        }
     }
     .tgroup {
         .timestamp {
