minor fixes, convadd style

--- a/src/ui/css/global.less
+++ b/src/ui/css/global.less
@@ -83,6 +83,10 @@ body .notr {
     border: none;
     color: #666;
     font-size: 0.9em;
+    .material-icons{
+        vertical-align: top;
+        font-size: 20px;
+    }
 }
 body .notrstack {
     min-width: 1px;
