--- a/src/ui/views/convadd.less
+++ b/src/ui/views/convadd.less
@@ -1,5 +1,14 @@
 .convadd {
-  padding: 20px;
+  padding: 20px 20px 0;
+  h1{
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: normal;
+    text-transform: initial;
+    letter-spacing: 0;
+    color: #444;
+  }
   .input {
       display: flex;
       justify-content: center;
@@ -33,10 +42,11 @@
     }
   }
 
+
   ul {
     display: flex;
     flex-wrap: wrap;
-    margin: 20px -4px 20px -4px;
+    margin: 10px -4px 20px -4px;
     li.selected {
       background-color: #adf;
     }
@@ -45,7 +55,7 @@
       padding: 10px;
       cursor: pointer;
       width: 85px;
-      height: 120px;
+      height: 126px;
       margin: 4px;
       overflow: hidden;
       border-radius: 5px;
@@ -58,8 +68,8 @@
       align-items: center;
       justify-content: space-between;
       > img {
-        max-width: 56px;
-        max-height: 56px;
+        width: 50px;
+        height: 50px;
         background-size: cover;
         border-radius: 50%;
         flex: none;
@@ -70,6 +80,35 @@
           -webkit-line-clamp: 2;
           -webkit-box-orient: vertical;
       }
+    }
+  }
+
+  .button{
+    width: 100%;
+    background: #0f9d58;
+    color: #fff;
+    margin-bottom: 10px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 10px;
+    cursor: pointer;
+    &:hover{
+      background: #0c7e47;
+    }
+    .material-icons{
+      font-size: 20px;
+      vertical-align: middle;
+      position: relative;
+      top: -2px;
+      margin-right: 4px;
+    }
+  }
+
+  .leave .button{
+    background: #F44336 ;
+    &:hover{
+      background: #f22516;
     }
   }
 
