--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -19,8 +19,6 @@
             margin-top: 17px;
             position: relative;
             width: 66%;
-            background: #fff;
-            border-radius: 10px;
             margin-left: 25px;
             .sender {
                 text-decoration: none;
@@ -34,30 +32,36 @@
                     border: 5px solid #e8e8e8;
                     position: absolute;
                     left: -25px;
-                    top: 50%;
-                    transform: translate(0, -50%);
+                    top: -10px;
                 }
                 span {
                     margin-left: 45px;
                 }
             }
             &.self{
-              background: #d4d4d4;
               margin-left: calc(~"34% - 25px");
+              text-align: right;
                 .sender img{
                     left: auto;
                     right: -25px;
                 }
                 .umessages{
                     margin-left: 5px;
-                    margin-right: 30px;
+                    padding-left: 5px;
+                    padding-right: 30px;
+                    background: #d4d4d4;
                 }
             }
             @radius: 13px;
             .umessages {
                 margin-top: -1px;
-                margin-left: 30px;
+                padding-left: 30px;
+                padding-right: 5px;
                 display: table;
+                border-radius: 10px;
+                background: #fff;
+                display: inline-block;
+                text-align: left;
                 .message {
                     font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, "NotoColorEmoji";
                     padding: 5px;
