--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -49,7 +49,8 @@
                     margin-left: 5px;
                     padding-left: 5px;
                     padding-right: 30px;
-                    background: #d4d4d4;
+                    background: #C5CED4;
+                    color: #263238;
                 }
             }
             @radius: 13px;
