--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -30,6 +30,7 @@
                     width: 50px;
                     height: 50px;
                     border: 5px solid #e8e8e8;
+                    background: #fff;
                     position: absolute;
                     left: -25px;
                     top: -10px;
@@ -44,6 +45,7 @@
                 .sender img{
                     left: auto;
                     right: -25px;
+                    background: #C5CED4;
                 }
                 .umessages{
                     margin-left: 5px;
