--- a/src/ui/css/yakyak/controls.less
+++ b/src/ui/css/yakyak/controls.less
@@ -5,8 +5,8 @@
         right: 35px;
         bottom: 20px;
         border: none;
-        background: #0f9d58;
-        color: #fff;
+        background: var(--green);
+        color: var(--white);
         height: 50px;
         line-height: 44px;
         font-size: 20px;
@@ -17,7 +17,7 @@
         cursor: pointer;
         transition: all .3s ease;
         &:hover{
-            box-shadow: 0 0 0 0 rgba(0, 0, 0, .6);
+            box-shadow: 0 0 0 0 rgba(0, 0, 0, .4);
         }
         .material-icons{
             vertical-align: middle;
