--- a/src/ui/css/yakyak/listhead.less
+++ b/src/ui/css/yakyak/listhead.less
@@ -1,6 +1,6 @@
 .listhead{
-	background: #0f9d58;
-	color: #fff;
+	background: var(--green);
+	color: var(--white);
 	height: 50px;
 	line-height: 50px;
 	position: relative;
