--- a/src/ui/css/yakyak/convlist.less
+++ b/src/ui/css/yakyak/convlist.less
@@ -4,9 +4,9 @@
         font-size: 9px;
         line-height: 18px;
         text-transform: uppercase;
-        color: #fff;
+        color: var(--white);
         text-align: center;
-        background-color: #6c6c6b;
+        background-color: var(--darkgrey);
     }
     .starred {
         .conv:last-child {
@@ -23,7 +23,7 @@
         display: flex;
         align-items: center;
         &:hover{
-            background: #f4f4f4;
+            background: var(--ghostwhite);
             .thumbs .presence.true{
                 border-color: #f4f4f4;
             }
@@ -34,11 +34,11 @@
             left: 0;
             width: 100%;
             height: 1px;
-            background: #fff;
+            background: var(--white);
             display: none;
         }
         &.selected {
-            background: #e8e8e8;
+            background: var(--lightgrey);
             cursor: auto;
             &:before{
                 content: '';
@@ -48,7 +48,7 @@
                 top: 0;
                 bottom: 0;
                 left: 0;
-                background: #0f9d58;
+                background: var(--green);
             }
             .divider {
                 display: none;
@@ -69,8 +69,8 @@
             line-height: 1;
             .lasttime{
                 font-size: 10px;
-                color: #4a4a4a;
                 width: 100%;
+                color: var(--lightblack);
             }
             .convname {
                 flex: 1;
@@ -79,10 +79,10 @@
                 white-space: nowrap;
                 display: -webkit-box;
                 -webkit-box-orient: vertical;
-                color: #4a4a4a;
                 font-weight: bold;
                 display: block;
                 margin-bottom: 4px;
+                color: var(--lightblack);
             }
             .lastmessage{
                 > div{
@@ -97,7 +97,7 @@
             flex: none;
             font-size: 11px;
             font-weight: 600;
-            color: #fff;
+            color: var(--white);
             height: 18px;
             line-height: 18px;
             text-align: center;
@@ -108,7 +108,7 @@
             right: -3px;
             width: auto;
             min-width: 18px;
-            background: red;
+            background: var(--red);
         }
         @square: 50px;
         .thumbs {
@@ -133,8 +133,8 @@
                 bottom: -1px;
                 right: -1px;
                 &.true{
-                    background: #0f9d58;
-                    border: 2px solid #fff;
+                    background: var(--green);
+                    border: 2px solid var(--white);
                 }
             }
             .moreuser{
@@ -143,9 +143,9 @@
                 position: absolute;
                 bottom: 0;
                 right: 0;
-                background: #455a64;
+                background: var(--lightblack);
                 border-radius: 100%;
-                color: #fff;
+                color: var(--white);
                 text-align: center;
                 font-size: 11px;
             }
