--- a/src/ui/css/yakyak/typinginfo.less
+++ b/src/ui/css/yakyak/typinginfo.less
@@ -5,9 +5,9 @@
     font-size: 10px;
     padding: 0 10px;
     transition: font-weight 0.5s, opacity .5s ease;
-    color: #777;
+    color: var(--darkgrey);
     text-align: center;
-    background: #fff;
+    background: var(--white);
     margin-left: 15px;
     margin-bottom: 5px;
     border-radius: 15px;
