dark theme see https://github.com/yakyak/yakyak/pull/146

--- a/src/ui/css/yakyak/colors.less
+++ b/src/ui/css/yakyak/colors.less
@@ -20,6 +20,30 @@ html{
 	}
 
 	&.dark{
+		--white: #1D242A;
+	    --ghostwhite: #2d3d46;
+	    --lightgrey: #242d34;
+	    --altgrey: #333940;
+	    --grey: #333940;
+	    --darkgrey: #4a525c;
+	    --lightblack: #475866;
+	    --black: #A2A2A2;
+	    --green: #161c20;
+	    --darkgreen: #0f1316;
+	    --red: #996DBF;
+	    --darkred: #804cad;
+	    --link: #F9C15C;
+		
+		.listhead,
+		.convhead .name,
+		.controls .button,
+		.convhead .headwrap > .button,
+		.convadd .button{
+			color: var(--black);
+		}
+	}
+
+	&.material{
 		--white: #202B31;
 	    --ghostwhite: #2d3d46;
 	    --lightgrey: #28353B;
