--- a/src/ui/css/yakyak/input.less
+++ b/src/ui/css/yakyak/input.less
@@ -79,6 +79,7 @@
             border: none;
             background: none;
             padding: 3px 60px 3px 10px;
+            color: var(--black);
             &::-webkit-input-placeholder{
                 color: var(--grey);
             }
