--- a/src/ui/views/input.less
+++ b/src/ui/views/input.less
@@ -81,7 +81,8 @@
                 display: inline-block;
                 flex: none;
                 margin-left: 5px;
-                border: 1px solid;
+                background: white;
+                border: 1px solid #dedede;
                 border-radius: 3px;
                 height: 26px;
                 width: 26px;
