Revert "refactored themeable colors into core less file"
This reverts commit 2ad6f135d32b2870858d7fc972c3abcfe915abc0.

--- a/src/ui/views/controls.less
+++ b/src/ui/views/controls.less
@@ -2,8 +2,9 @@
 
 .controls {
     display: flex;
+    background: #fff;
     height: 31px;
-    border-top: 1px solid;
+    border-top: 1px solid #b4b4b4;
     > .fill {
         flex: 1;
     }
@@ -12,13 +13,13 @@
         width: 30px;
         height: 31px;
         line-height: 28px;
-        border-right: 1px solid;
+        border-right: 1px solid #b4b4b4;
         text-align: center;
         cursor: pointer;
         align-content: center;
         &:last-child {
             border-right: none;
-            border-left: 1px solid;
+            border-left: 1px solid #b4b4b4;
         }
     }
 }
