--- a/src/ui/views/input.less
+++ b/src/ui/views/input.less
@@ -17,7 +17,7 @@
         display: none;
         > #emoji-group-selector {
             overflow-x: scroll;
-            border-bottom: 1px solid;
+            border-bottom: 1px solid #dedede;
             height: 33px;
             margin-left: 5px;
 
@@ -26,7 +26,7 @@
                 padding-bottom:2px;
             }
             > .emoticon.glow {
-                border-bottom: 2px solid;
+                border-bottom: 2px solid #a0a0a0;
 
             }
 
@@ -38,7 +38,7 @@
         > .emoji-selector {
             height:131px;
             overflow-y: scroll;
-            border-bottom: 1px solid;
+            border-bottom: 1px solid #dedede;
             width: 100%;
             padding: 5px 2px 5px 5px;
 
@@ -63,7 +63,7 @@
             font-size: 14px;
             line-height: 18px;
             outline: none;
-            border: 1px solid;
+            border: 1px solid #dedede;
             border-radius: 3px;
             padding: 3px 10px;
         }
