--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -10,6 +10,7 @@
             display: block;
             font-size: 12px;
             text-align: center;
+            color: #999;
         }
         .ugroup {
             margin-top: 17px;
@@ -17,6 +18,7 @@
             .sender {
                 text-decoration: none;
                 font-size: 11px;
+                color: #999;
                 img {
                     border: none;
                     width: 35px;
@@ -57,6 +59,7 @@
                     &.conversation_rename,
                     &.membership_change {
                         font-style: italic;
+                        color: #999;
                         font-size: 0.9em;
                     }
                 }
