--- a/src/ui/css/global.less
+++ b/src/ui/css/global.less
@@ -17,6 +17,7 @@ html, body {
 }
 
 body {
+    background: #fff;
     font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
