--- a/src/ui/views/applayout.less
+++ b/src/ui/views/applayout.less
@@ -12,7 +12,7 @@
             width: 30px;
             line-height: 30px;
             text-align: center;
-            border-right: 1px solid;
+            border-right: 1px solid #b4b4b4;
         }
     }
     > .leftresize {
@@ -28,7 +28,8 @@
     }
     > .left {
         -webkit-user-select: none;
-        border-right: 1px solid;
+        background: #f0f0f0;
+        border-right: 1px solid #b4b4b4;
         flex: none;
         display: flex;
         flex-direction: column;
@@ -56,7 +57,8 @@
         }
         > .foot {
             flex: none;
-            border-top: 1px solid;
+            background: #f6f6f6;
+            border-top: 1px solid #b4b4b4;
         }
     }
     > .info {
@@ -65,8 +67,9 @@
         right: 15px;
         > div {
             padding: 5px 10px;
-            border: 1px solid;
+            border: 1px solid #b4b4b4;
             border-top: none;
+            background: white;
         }
     }
 }
