--- a/src/ui/views/convlist.less
+++ b/src/ui/views/convlist.less
@@ -4,8 +4,11 @@
         font-size: 9px;
         line-height: 14px;
         text-transform: uppercase;
+        color: #666;
         padding-top: 6px;
         padding-left: 7px;
+        background-color: #e3e3e3;
+        border-bottom: 1px solid #e1e1e1;
     }
     .starred {
         .conv:last-child {
@@ -27,13 +30,17 @@
             left: 15px;
             width: 100%;
             height: 1px;
+            background: #e1e1e1;
         }
         &.selected {
+            background: #4271de;
+            color: #fff;
             cursor: auto;
             .divider {
                 display: none;
             }
             .convtyping {
+                color: #fff;
                 opacity: 0.7;
             }
         }
@@ -41,6 +48,7 @@
             font-weight: 500;
         }
         &.purehang {
+            color: #999;
             font-style: italic;
         }
         .convname {
@@ -68,6 +76,7 @@
         }
         .convtyping {
             flex: none;
+            color: #999;
             margin-right: -10px;
             width: 10px;
             text-align: right;
