break-word in messages to prevent overflow issues

--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -42,6 +42,7 @@
                     font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, "NotoColorEmoji";
                     padding-bottom: 5px;
                     white-space: pre-wrap;
+                    word-break: break-word;
                     &.placeholder {
                         opacity: 0.5;
                     }
