Temporarely remove webkit scrollbars.
We need to find out a way to show them
in overlay. Othwerwise they steal space to the 
content and they don’t look nice

--- a/src/ui/css/yakyak/applayout.less
+++ b/src/ui/css/yakyak/applayout.less
@@ -95,10 +95,10 @@
     }
 }
 
-::-webkit-scrollbar {
-    width: 8px;
-}
- 
-::-webkit-scrollbar-thumb {
-    background: var(--grey);
-}
+// ::-webkit-scrollbar {
+//     width: 4px;
+// }
+//
+// ::-webkit-scrollbar-thumb {
+//     background: var(--grey);
+// }
