smaller header, melt header in titlebar on osx

--- a/src/ui/css/yakyak/colors.less
+++ b/src/ui/css/yakyak/colors.less
@@ -13,6 +13,8 @@ html{
 --red: #f44336;
 --darkred: #ea1c0d;
 --link: #3879d9;
+//
+--headerbarheight: 35px;
 
 	&.blue{
 		--green: #03A9F4;
@@ -33,7 +35,7 @@ html{
 	    --red: #996DBF;
 	    --darkred: #804cad;
 	    --link: #F9C15C;
-		
+
 		.listhead,
 		.convhead .name,
 		.controls .button,
