--- a/src/ui/css/yakyak/listhead.less
+++ b/src/ui/css/yakyak/listhead.less
@@ -1,10 +1,24 @@
-.listhead{
-	background: var(--green);
-	color: var(--white);
-	height: 50px;
-	line-height: 50px;
-	position: relative;
-	text-align: center;
-	font-size: 16px;
-	font-weight: bold;
+.listhead {
+    background: var(--green);
+    color: var(--white);
+    height: var(--headerbarheight);
+    line-height: var(--headerbarheight);
+    position: relative;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    -webkit-app-region: drag;
+    -webkit-user-select: none;
+}
+
+.osx {
+    .listhead {
+        .listheadlabel {
+            padding-left: 77px;
+            text-align: left;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            padding-right: 10px;
+        }
+    }
 }
