--- a/src/ui/css/yakyak/convlist.less
+++ b/src/ui/css/yakyak/convlist.less
@@ -72,7 +72,8 @@
                 width: 100%;
                 display: block;
                 padding-bottom: 4px;
-                color: #aaa;
+                color: var(--darkgrey);
+
             }
             .convname {
                 flex: 1;
