fix header on app zoom. Windows: hide menu bar and burger button to show it.

--- a/src/ui/css/yakyak/applayout.less
+++ b/src/ui/css/yakyak/applayout.less
@@ -64,7 +64,7 @@
         flex: 1;
         display: flex;
         flex-direction: column;
-        background: linear-gradient(var(--green), var(--green) var(--headerbarheight), var(--lightgrey) var(--headerbarheight));
+        background: linear-gradient(var(--green), var(--green) ~"calc(var(--headerbarheight) / var(--zoom))", var(--lightgrey) ~"calc(var(--headerbarheight) / var(--zoom))");
         > .main {
             flex: 1;
             overflow-x: hidden;
