--- a/src/ui/css/yakyak/listhead.less
+++ b/src/ui/css/yakyak/listhead.less
@@ -1,20 +1,32 @@
 .listhead {
     background: var(--green);
     color: var(--white);
-    height: var(--headerbarheight);
-    line-height: var(--headerbarheight);
+    height: ~"calc(var(--headerbarheight) / var(--zoom))";
+    line-height: ~"calc(var(--headerbarheight) / var(--zoom))";
     position: relative;
     text-align: center;
-    font-size: 16px;
+    font-size: ~"calc(16px / var(--zoom))";
     font-weight: bold;
     -webkit-app-region: drag;
     -webkit-user-select: none;
+    button{
+        background: none;
+        color: var(--white);
+        height: ~"calc(var(--headerbarheight) / var(--zoom))";
+        padding: 0 .5em;
+        position: absolute;
+        left: 0;
+        cursor: pointer;
+        .material-icon{
+            font-size: ~"calc(24px / var(--zoom))";
+        }
+    }
 }
 
 .osx {
     .listhead {
         .listheadlabel {
-            padding-left: 77px;
+            padding-left: ~"calc(77px / var(--zoom))";
             text-align: left;
             overflow: hidden;
             text-overflow: ellipsis;
