added ability to edit font size in view menu

--- a/src/ui/css/manifest.less
+++ b/src/ui/css/manifest.less
@@ -4,6 +4,7 @@
 @import 'noto-color-emoji/noto-color-emoji';
 
 @import 'yakyak/colors';
+@import 'yakyak/fonts';
 @import 'yakyak/global';
 @import 'yakyak/applayout';
 @import 'yakyak/controls';
