--- a/src/ui/css/yakyak/input.less
+++ b/src/ui/css/yakyak/input.less
@@ -73,7 +73,7 @@
         textarea {
             width: 100%;
             resize: vertical;
-            font-size: 14px;
+            font-size: var(--fontsize);
             line-height: 18px;
             outline: none;
             border: none;
