--- a/src/ui/css/yakyak/global.less
+++ b/src/ui/css/yakyak/global.less
@@ -24,7 +24,7 @@ body {
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: subpixel-antialiased;
     font-weight: 400;
-    font-size: 14px;
+    font-size: var(--fontsize);
     line-height: 20px;
     -webkit-font-smoothing: antialiased;
 }
