Remove text selection from .convhead

--- a/src/ui/css/yakyak/convhead.less
+++ b/src/ui/css/yakyak/convhead.less
@@ -2,6 +2,7 @@
 	width: 100%;
 	position: relative;
 	height: ~"calc(var(--headerbarheight) / var(--zoom))";
+	cursor: default;
 
 	.name{
 		background: var(--green);
