Remove text selection from .listhead

--- a/src/ui/css/yakyak/listhead.less
+++ b/src/ui/css/yakyak/listhead.less
@@ -7,6 +7,7 @@
     text-align: center;
     font-size: ~"calc(16px / var(--zoom))";
     font-weight: bold;
+    cursor: default;
     -webkit-app-region: drag;
     -webkit-user-select: none;
     button{
