added twitter preview rendering

--- a/src/ui/css/yakyak/messages.less
+++ b/src/ui/css/yakyak/messages.less
@@ -92,6 +92,12 @@
                         color: var(--darkgrey);
                         font-size: 0.9em;
                     }
+                    .tweet {
+                      padding: 8px 8px 0;
+                      font-size: 0.9em;
+                      background-color: #f7f7f7;
+                      border-radius: 8px;
+                    }
                 }
             }
         }
