tweet background-color should adapt to selected theme

--- a/src/ui/css/yakyak/messages.less
+++ b/src/ui/css/yakyak/messages.less
@@ -95,7 +95,7 @@
                     .tweet {
                       padding: 8px 8px 0;
                       font-size: 0.9em;
-                      background-color: #f7f7f7;
+                      background-color: var(--lightgrey);
                       border-radius: 8px;
                     }
                 }
