Use cursor default for convlist

--- a/src/ui/css/yakyak/convlist.less
+++ b/src/ui/css/yakyak/convlist.less
@@ -7,6 +7,7 @@
         color: var(--white);
         text-align: center;
         background-color: var(--darkgrey);
+        cursor: default;
     }
     .starred {
         .conv:last-child {
@@ -39,7 +40,7 @@
         }
         &.selected {
             background: var(--lightgrey);
-            cursor: auto;
+            cursor: default;
             &:before{
                 content: '';
                 display: block;
